[project]
name = "devops-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "fastembed>=0.7.4",
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
    "langchain-core>=1.2.18",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.16",
    "mypy>=1.19.1",
    "openai>=2.26.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.0",
    "redis>=7.3.0",
    "sentence-transformers>=5.3.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
